Ajout rom de base, règles install et uninstall dans le makefiles, corrections erreurs dans .gitignore

--- a/opc/Makefile
+++ b/opc/Makefile
@@ -26,6 +26,12 @@ opc.tab.c : opc.y
 lex.yy.c : opc.l
 	flex opc.l
 
+install : opc
+	install opc ~/.local/bin/opc
+
+uninstall : 
+	rm ~/.local/bin/opc
+
 .PHONY : clean
 
 clean :
