suppression fichier doc inutile et ajout des exécutable dans la règle clean des makefiles de opc et pasm

--- a/opc/Makefile
+++ b/opc/Makefile
@@ -35,4 +35,4 @@ uninstall :
 .PHONY : clean
 
 clean :
-	-rm opc.tab.h opc.tab.c lex.yy.c lex.yy.o opc.tab.o main.o 
+	-rm opc opc.tab.h opc.tab.c lex.yy.c lex.yy.o opc.tab.o main.o 
